--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+    
+    <script type="text/javascript">
+        window.onload = function() {
+            document.querySelector(".menu_opener").addEventListener("click", function(){
+                if (document.querySelector(".menu nav").style.display == 'flex') {
+                    document.querySelector(".menu nav").style.display = 'none';
+                } else {
+                    document.querySelector(".menu nav").style.display = 'flex';
+                }
+            });
+            window.addEventListener('resize', function(){
+                if (window.innerWidth > 800){
+                    document.querySelector(".menu nav").style.display = 'flex';
+                } else {
+                    document.querySelector(".menu nav").style.display = 'none';
+                }
+            });
+        };
+    </script>
+    
 </head>
 <body>
 <header>
@@ -19,7 +39,7 @@
         </div>
         <div class="menu">
             <img src="./Assets/imagens/menu.png" class="menu_opener"/>
-            <nav>
+            <nav style="display:none;">
                 <ul>
                     <li><a class="active" href="">HOME</a></li>
                     <li><a href="">ABOUT US</a></li>
