--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
     <section class="default dark facts">
         <div class="section_title">Some facts</div>
         <div class="section_desc">About our work</div>
-        <div class="section_body">
+        <div class="section_body mobile">
             <div class="section_facts">
                 <h1>1000</h1>
                 <div class="text_bar"></div>
@@ -506,23 +506,23 @@
                     </div>
                     <div class="foto_area"> 
                         <div class="twitter"><img  src="./Assets/imagens/twitter.png" alt=""></div>
-                        <div>152</div>
+                        <div class="foto_text">152</div>
                     </div>
                     <div class="foto_area"> 
                         <div class="linkedin"><img src="./Assets/imagens/linkedin.png" alt=""></div>
-                        <div>152</div>
+                        <div class="foto_text">152</div>
                     </div>
                     <div class="foto_area"> 
                         <div class="facebook"><img src="./Assets/imagens/facebook.png" alt=""></div>
-                        <div>152</div>
+                        <div class="foto_text">152</div>
                     </div>
                     <div class="foto_area"> 
                         <div class="googleplus"><img src="./Assets/imagens/googleplus.png" alt=""></div>
-                        <div>152</div>
+                        <div class="foto_text">152</div>
                     </div>
                     <div class="foto_area"> 
                         <div class="pinterest"> <img src="./Assets/imagens/pinterest.png" alt=""></div>
-                        <div>152</div>
+                        <div class="foto_text">152</div>
                     </div>
                 </div>
             </div>
