--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="menu">
             <img src="./Assets/imagens/menu.png" class="menu_opener"/>
-            <nav style="display:flex;">
+            <nav>
                 <ul>
                     <li><a class="active" href="">HOME</a></li>
                     <li><a href="">ABOUT US</a></li>
