--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
         </div>
         <div class="sliders_pointers">
-            <div class="sliders_point" onclick="toSlide1()"></div>
+            <div class="sliders_point active" onclick="toSlide1()"></div>
             <div class="sliders_point" onclick="toSlide2()"></div>
             <div class="sliders_point" onclick="toSlide3()"></div>
         </div>
@@ -307,7 +307,7 @@
                 </div>
             </div>
             <div class="sliders_pointers"> 
-                <div class="sliders_point">ssss</div>
+                <div class="sliders_point"></div>
                 <div class="sliders_point"></div>
                 <div class="sliders_point"></div>
             </div>
